--- a/Client/package.json
+++ b/Client/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "angular-quickstart",
   "version": "1.0.0",
   "scripts": {
@@ -33,7 +33,9 @@
   "devDependencies": {
     "@types/core-js": "^0.9.34",
     "@types/node": "^6.0.45",
+    "babel-eslint": "^7.1.1",
     "concurrently": "^3.0.0",
+    "eslint": "^3.15.0",
     "lite-server": "^2.2.2",
     "typescript": "^2.0.3"
   }
